add postgres to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,14 @@ services:
     ports:
       - "8989:8989"
     environment:
-      # Database connection (will be replaced with Supabase in step 1b)
-      - DATABASE_URL=${DATABASE_URL:-postgres://postgres:postgres@localhost:5432/postgres}
+      # Database connection pointing to the postgres service with SSL disabled
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres?sslmode=disable
     restart: unless-stopped
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - app_network
     # For future health checks
     # healthcheck:
     #   test: ["CMD", "curl", "-f", "http://localhost:8989/info"]
@@ -19,11 +24,29 @@ services:
     #   retries: 3
     #   start_period: 10s
 
-# Volumes section for future use
-# volumes:
-#   data_volume:
+  postgres:
+    image: postgres:15-alpine
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app_network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
-# Networks section for future use
-# networks:
-#   app_network:
-#     driver: bridge
+volumes:
+  postgres_data:
+
+networks:
+  app_network:
+    driver: bridge
