add NIP-42 auth

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
       - app_network
     volumes:
       - ./config.json:/config.json
+      - ./.env:/.env
+    env_file:
+      - .env
     # For future health checks
     # healthcheck:
     #   test: ["CMD", "curl", "-f", "http://localhost:8989/info"]
