--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8989:8989"
-    environment:
-      # Database connection pointing to the postgres service with SSL disabled
-      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
+    # All database configuration comes from .env file
     restart: unless-stopped
     depends_on:
       postgres:
